public/css/styles.css
* {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  margin: 0;
  padding: 0;
}

*:focus {
  outline: none;
}

body {
  overflow-y: none;
}

p {
  margin-bottom: 0;
}

h1, h2, h3, h4, h5, h6 {
  margin-bottom: 0;
}

button {
  margin-bottom: 0;
}

a {
  color: #333232;
}

a:hover {
  color: #333232;
  cursor: pointer;
  text-decoration: none;
}

a:focus {
  color: #333232;
  text-decoration: none;
}

.btn-primary {
  background-color: #333232;
  border-radius: 0;
  border: 1px solid #333232;
}

.btn {
  border-radius: 0;
}

.btn:hover {
  background-color: #fff;
  color: #333232;
  border: 1px solid #333232;
}

.btn:focus {
  -webkit-box-shadow: none;
          box-shadow: none;
}

.btn:not(:disabled):not(.disabled):active {
  -webkit-box-shadow: none;
          box-shadow: none;
  background-color: #333232;
  background-color: #fff;
  color: #333232;
}

.btn:not(:disabled):not(.disabled).active:focus, .btn:not(:disabled):not(.disabled):active:focus, .show > .btn.dropdown-toggle:focus {
  -webkit-box-shadow: none;
          box-shadow: none;
}

.btn:not(:disabled):not(.disabled).active, .btn:not(:disabled):not(.disabled):active, .show > .btn.dropdown-toggle {
  border-color: #333232;
}

select {
  -webkit-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-size: 10px;
  background-position: calc(100% - 8px) 50%;
  background-repeat: no-repeat;
  background-color: #fff;
  background-image: url(../../public/images/icons/p3/dropdown-arrows.svg);
  padding: 4px 23px 4px 10px;
}

select:focus {
  outline: none;
}

form select::-ms-expand {
  display: none;
}

.icon-open-gallery {
  position: absolute;
  bottom: 10px;
  left: 10px;
}

.icon-info {
  background: url("../../../public/images/icons/p3/icon-info-dark-default.svg");
  height: 16px;
  width: 16px;
  display: inline-block;
  background-repeat: no-repeat;
  background-position: center;
}

.icon-info-white {
  background: url("../../../public/images/icons/p3/icon-info-light-default.svg");
  height: 16px;
  width: 16px;
  display: inline-block;
  background-repeat: no-repeat;
  background-position: center;
}

.icon-chevron-right {
  -webkit-mask-image: url(../../../public/images/icons/p3/icon-chevron-white-right.svg);
  mask-image: url(../../../public/images/icons/p3/icon-chevron-white-right.svg);
  background-color: white;
  height: 19px;
  width: 16px;
  display: inline-block;
  background-repeat: no-repeat;
  background-position: center;
}

.icon-chevron-down {
  -webkit-mask-image: url(../../../public/images/icons/p3/icon-chevron-white-down.svg);
  mask-image: url(../../../public/images/icons/p3/icon-chevron-white-down.svg);
  background-color: white;
  height: 16px;
  width: 16px;
  display: inline-block;
  background-repeat: no-repeat;
  background-position: center;
}

.icon-chevron-up {
  -webkit-mask-image: url(../../../public/images/icons/p3/icon-chevron-white-up.svg);
  mask-image: url(../../../public/images/icons/p3/icon-chevron-white-up.svg);
  background-color: white;
  height: 16px;
  width: 16px;
  display: inline-block;
  background-repeat: no-repeat;
  background-position: center;
}

.view-rates-btn:hover .icon-chevron-down {
  background-color: #333232;
}

.view-rates-btn:hover .icon-chevron-up {
  background-color: #333232;
}

.select-rate-btn:hover .icon-chevron-right {
  background-color: #333232;
}

.icon-search-white {
  background: url("../../../public/images/icons/p3/icon-new-search.svg");
  height: 16px;
  width: 16px;
  display: inline-block;
  background-repeat: no-repeat;
  background-position: center;
}

.circle-backround {
  background-color: #000;
  border-radius: 25px;
  width: 30px;
  height: 30px;
}

.hotel-info-buttons .btn-primary {
  margin-right: 20px;
}

#mobile-hotel-info {
  background-color: #333232;
  padding: 14px 0;
}

#mobile-hotel-info a {
  font-size: 15px;
  color: #fff;
  font-family: "Montserrat", sans-serif;
}

#mobile-hotel-info a:focus {
  text-decoration: none;
}

.hotel-info-buttons .btn-primary {
  border: 1px solid rgba(131, 111, 111, 0.8);
  padding: 8.5px 17.5px;
}

.hotel-info-buttons .btn-primary:hover {
  border: 1px solid #fff;
}

.hotel-info-buttons .btn-primary:focus {
  -webkit-box-shadow: none;
          box-shadow: none;
}

.hotel-info-buttons .btn-primary:not(:disabled):not(.disabled):active {
  -webkit-box-shadow: none;
          box-shadow: none;
  background-color: #fff;
  color: #333232;
}

.hotel-info-buttons .btn-primary:not(:disabled):not(.disabled).active:focus, .hotel-info-buttons .btn-primary:not(:disabled):not(.disabled):active:focus, .show > .hotel-info-buttons .btn-primary.dropdown-toggle:focus {
  -webkit-box-shadow: none;
          box-shadow: none;
}

.hotel-info-buttons .btn-primary:not(:disabled):not(.disabled).active, .hotel-info-buttons .btn-primary:not(:disabled):not(.disabled):active, .show > .hotel-info-buttons .btn-primary.dropdown-toggle {
  border-color: #333232;
}

.booking-summary-heading {
  padding: 10px;
  background-color: #f2f2f2;
  font-family: "Montserrat", sans-serif;
}

@media screen and (min-width: 992px) {
  .booking-summary-heading {
    padding: 30px 30px 20px 30px;
  }
}

.booking-summary-heading h2 {
  font-size: 15px;
  color: #333232;
  text-transform: uppercase;
}

@media screen and (min-width: 992px) {
  .booking-summary-heading h2 {
    font-size: 22px;
  }
}

.booking-summary-data {
  background-color: #f2f2f2;
  padding: 0 8px;
}

.booking-summary-data p {
  width: 50%;
}

.booking-summary-data .booking-row {
  padding: 10px 0;
}

@media screen and (min-width: 992px) {
  .booking-summary-data {
    padding: 0 30px;
  }
}

@media screen and (max-width: 991px) {
  .booking-summary-data {
    display: none;
  }
}

.rotate180 {
  -webkit-transform: rotate(180deg);
          transform: rotate(180deg);
}

.card-style {
  -webkit-box-shadow: inset 0px 0px 0px 1px #d8d8d8;
          box-shadow: inset 0px 0px 0px 1px #d8d8d8;
  margin-bottom: 30px;
}
/* ... */

